--- a/frontend/css/profile.css
+++ b/frontend/css/profile.css
@@ -10,30 +10,19 @@
     margin-bottom: 3rem;
     flex-wrap: wrap;
 }
-
-.profile-avatar img {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid var(--border-color);
+.profile-info{
+  margin-top: 19px;
 }
 
 .profile-info .username {
-    font-size: 1.75rem;
+    font-size: 1.85rem;
     margin-bottom: 0.5rem;
 }
 
 .profile-info .user-email {
     font-size: 1rem;
-    color: var(--dark-gray);
+    color: var(--gray);
     margin-bottom: 0.75rem;
-}
-
-.profile-info .user-bio {
-    font-size: 1rem;
-    color: var(--secondary-color);
-    max-width: 600px;
 }
 
 .user-posts h2 {
@@ -48,8 +37,10 @@
 .card {
   max-width: 440px;
   border-radius: 1rem;
-  background-color:#f5f5f5;
+  background-color:white;
   padding: 1rem;
+  border: var(--gray);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 .infos {
@@ -66,14 +57,16 @@
     justify-content: center;
     min-width: 7rem;
     height: 7rem;
+    object-fit: cover;
     width: 7rem;
     border-radius: 0.5rem;
     background-color: white;
-    /* background: linear-gradient(to bottom right, rgb(118, 36, 194), rgb(185, 128, 240)); */
+    overflow: hidden;
 }
-.image i{
-    color: black;
-    font-size: 30px;
+.image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .info {
